# AdventOfCode

./: pyproject.toml  utils.py
Day3/: solution.py
Day4/: solution.py
advent/year_2021/: utils.py
advent/year_2021/day_1/: solution.py
advent/year_2021/day_2/: solution.py
advent/year_2021/day_3/: solution.py
advent/year_2021/day_4/: solution.py
advent/year_2021/day_5/: objects.py  solution.py
advent/year_2021/day_6/: objects.py  solution.py
advent/year_2021/day_7/: main.py
advent/year_2021/day_8/: main.py
advent/year_2022/day_1/: main.py  test.py  test_input.txt
advent/year_2022/day_2/: input.txt  main.py  test.py  test_input.txt
advent/year_2022/day_3/: main.py  test.py
test/: day_5_test_input.txt  test_day_5.py  test_day_6.py  test_day_7.py  test_utils.py
