[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.4"
pytest = "^6.2.5"
pre-commit = "^2.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
